[gd_scene load_steps=8 format=2]

[ext_resource path="res://Test/TestCamera.tscn" type="PackedScene" id=1]
[ext_resource path="res://Test/MapTestHUDCanvas.tscn" type="PackedScene" id=2]
[ext_resource path="res://BackgroundLayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Test/Scripts/PlayerFactionTest.gd" type="Script" id=4]
[ext_resource path="res://Test/TestMap.tscn" type="PackedScene" id=5]
[ext_resource path="res://HUD/Temp/OwnedHexContextMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://MainNodes/SloadFactionNode.tscn" type="PackedScene" id=8]


[node name="PlayerFactionTest" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}
Faction = ExtResource( 8 )
OwnedHexMenu = ExtResource( 6 )

[node name="Map" parent="." instance=ExtResource( 5 )]

[node name="Factions" type="Node2D" parent="."]

[node name="BackgroundLayer" parent="." instance=ExtResource( 3 )]

[node name="TestCamera" parent="." instance=ExtResource( 1 )]
visible = false

[node name="MapTestHUDCanvas" parent="." instance=ExtResource( 2 )]

[node name="NextTurn" parent="MapTestHUDCanvas" index="5"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -125.589
margin_top = -39.7742
margin_right = -10.5886
margin_bottom = -9.77417
[connection signal="pressed" from="MapTestHUDCanvas/NewMapPanel/Remap2" to="." method="_on_Remap2_pressed"]
[connection signal="pressed" from="MapTestHUDCanvas/NextTurn" to="." method="_on_NextTurn_pressed"]

[editable path="Map"]

[editable path="MapTestHUDCanvas"]
